<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="328dp"
    android:layout_height="72dp"
    android:background="@drawable/rounded_background"
    android:orientation="horizontal"
    android:padding="12dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/song_picture" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/songTitle"
            android:layout_width="184dp"
            android:layout_height="24dp"
            android:text="@string/song_title"
            android:textColor="#E2E2E2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/songAuthor"
            android:layout_width="184dp"
            android:layout_height="20dp"
            android:text="@string/author"
            android:textColor="#C3C7C7"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:backgroundTint="#262E2F"
            android:contentDescription="@string/image_of_play_button"
            android:src="@drawable/ic_play" />
    </LinearLayout>

</LinearLayout>
