<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#151617"
    android:padding="16dp">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/songImage"
        android:layout_width="340dp"
        android:layout_height="340dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        app:roundedCornerRadius="8dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="340dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songImage">

        <TextView
            android:id="@+id/songTitle"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/song_title"
            android:textColor="#91D2D5"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/songAuthor"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/author"
            android:textColor="#C3C7C7"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/songDescription"
        android:layout_width="340dp"
        android:justificationMode="inter_word"
        android:layout_height="364dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/description"
        android:lineSpacingExtra="4dp"
        android:textColor="#E2E2E2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.142" />

</androidx.constraintlayout.widget.ConstraintLayout>